gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opabs-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: prithuadhikary/opabs-gateway:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: gateway
                port:
                  number: 80
            pathType: Prefix
            path: /api
          - backend:
              service:
                name: opabs-web
                port:
                  number: 80
            pathType: Prefix
            path: /
      host: opabs.labs.com
  tls:
    - hosts:
        - opabs.labs.com
      secretName: opabs-certificate
